iFeature Changelog

****************************

Version 4.5.5 (05-30-12)
-Added Hindi language files.

Version 4.5.4 (05-24-12)
-Bug fix for sidebars related to last update. 

Version 4.5.3 (05-22-12)
-Added prefixes for all custom post meta data options.
-Added function to convert previous custom post meta values to new ones.
-Added Danish language files.
-Added Catalan language files.

Version 4.5.2 (05-15-12)
-Removed call for unnecessary JS file causing errors for some users.  
-Updated some copy in the stylesheet. 

Version 4.5.1 (05-14-12)
-Added option for responsive video embeds (Youtube/Vimeo).
-Added Polish language files.

Version 4.5 (05-08-12)
-Added Product Element.
-Updated styling of Twitter Bar and Breadcrumb Elements.
-General CSS cleanup. 
-Updated default background image.
-Adding missing translation wrapper to pagination function.
-Added Italian, Turkish, Swedish, Spanish, Persian and Russian language files.
-Updated core.pot

Version 4.1.6 (05-01-12)
-Fixed blowout when all social icons are enabled.
-Removed some additional unused images.
-Mobile Menu now works in phone landscape mode. 
-Fixed bug with broken "next" link in pagination.

Version 4.1.5 (04-24-12)
-Added missing $content_width global to theme setup function.
-Added missing tags hook to archive template.
-Updated pagination function with missing translation functions.
-Updated core.pot.
-Added Pinterest social icon option.
-Removed several unused images.

Version 4.1.4 (04-17-12)
-CSS fix for menu in IE.
-Removed ereg_replace from Google Font code for PHP 5.3 compatibility. 
-Re-added IE Quirks fix. 
-Removed some unused translation functions.

Version 4.1.3 (04-10-12)
-Fixed Twitter Bar @replies option in page options.
-Added Hebrew language files.
-Removed unecessary translations from several po files, updated corresponding mo files.

Version 4.1.2 (04-03-12)
-Twitter Bar no longer requires Twitter for WordPress plugin.
-Unidentified index error fix for meta box code. 