@@ -86,7 +86,7 @@ function synapse_comments_loop() {
 	</div>
 
 	<?php if ( get_option('comment_registration') && !is_user_logged_in() ) : ?>
-		<p><?php printf (__( 'You must be', 'core' )); ?><a href="<?php echo wp_login_url( get_permalink() ); ?>"> <?php printf( __( 'logged in', 'core' ), '</a>', __('to post a comment.', 'core' )); ?></p>
+		<br /><p><?php echo __( 'You must be', 'core' ); ?><a href="<?php echo wp_login_url( get_permalink() ); ?>"> <?php echo __( 'logged in', 'core' ); ?></a> <?php echo __('to post a comment.', 'core' ); ?></p>
 	<?php else : ?>
 	
 	<?php comment_form(); ?>
