@@ -86,20 +86,10 @@ function custom_after_content_sidebar_markup() {
 function ifeature_header_contact_area_content() { 
 	global $themeslug, $options; 
 	$contactdefault = apply_filters( 'synapse_header_contact_default_text', 'Enter Contact Information Here' ); 
-	
-	if ($options->get($themeslug.'_header_contact') == '' ) {
+			
 		echo "<div id='header_contact'>";
-			printf( __( $contactdefault, 'core' )); 
-		echo "</div>";
-	}
-	if ($options->get($themeslug.'_header_contact') != 'hide' ) {
-		echo "<div id='header_contact1'>";
 		echo stripslashes ($options->get($themeslug.'_header_contact')); 
 		echo "</div>";
-	}	
-	if ($options->get($themeslug.'_header_contact') == 'hide' ) {
-		echo "<div style ='height: 10%;'>&nbsp;</div> ";
-	}
 }
 
 /**
